--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    @apply w-full h-full;
+    @apply select-none overflow-auto;
+}
+
+body {
+    @apply bg-[#0a0a0a] text-white w-[inherit] h-[inherit];
+}
